[gd_scene load_steps=6 format=2]

[ext_resource path="res://Gem.gd" type="Script" id=1]
[ext_resource path="res://img/monster1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0789

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 13 ]
}

[node name="Gem" type="KinematicBody2D"]
position = Vector2( 221.311, 133.08 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )
hframes = 14

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -8.64, 0 )
shape = SubResource( 1 )

[node name="IdleAnimation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="ExplodeAnimation" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 3 )
[connection signal="animation_finished" from="ExplodeAnimation" to="." method="_on_ExplodeAnimation_animation_finished"]
